# aoc

./: pyproject.toml
aoc/: __init__.py  main.py  utils.py
aoc2021/: main.py  utils.py
aoc2021/days/: day1.py
